# nex

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD-PARTY-NOTICES.md  flake.nix  justfile
.flynt/: config.toml
.github/workflows/: ci.yml  deploy-site.yml  release.yml
.omegon/: agent-journal.md  audit-log.jsonl  history  profile.json
.omegon/runtime/: workspace.json  workspaces.json
ai/memory/: facts.db
data/devenv/: nex-mapping.v1.pkl
docs/: apply-existing-machine-profile-targets.md  artifact-check-boundary-validator.md  artifact-evidence-tiers.md  artifact-relationship-map.md  artifact-relationship-validation.md  bundle-pkl-evaluator-for-nex-releases.md  darwin-hardware-collector.md  devenv-surface-awareness-catalog.md  devenv-surface-catalog-implementation.md  disk-attestation-classifier.md  forge-delivery-write-image.md  forge-inventory-attestation-integration.md  forge-materialization-delivery-split.md  forge-vm-image-targets.md  future-machine-profiles.md  hardware-inventory-scanner-implementation-slices.md  hardware-inventory-schema-v1.md  hardware-purpose-profile-matrix.md  issue-5-materialization-roadmap.md  linux-hardware-collector.md  machine-profile-matching-engine.md  machine-profiles.md  materialization-payloads.md  nex-cli-command-surface-map.md  nex-devenv-container-strategy.md  nex-devenv-import-implementation-plan.md  nex-devenv-import-migration.md  nex-devenv-import-report-schema.md  nex-devenv-import-second-order-effects.md  nex-devenv-parallels.md  nex-hardware-inventory-scan.md  nex-pkl-local-config.md  nex-profile-explain-test-info.md  nex-profile-option-schema-docs.md  nex-profile-output-builds.md  nex-profile-task-dag.md  nex-profiles-starter-bases.md  nex-repo-devenv-shell.md  nex-secretspec-integration.md  nixos-curl-install-pkl-runtime.md  (+1 more)
roastme/: FIXES-2.md  FIXES.md  ROAST-2.md  ROAST.md
site/: astro.config.mjs  package.json  pnpm-lock.yaml  wrangler.toml
site/public/: _headers  install.sh  robots.txt
src/: aliases.rs  ansi.rs  armory.rs  armory_lock.rs  armory_store.rs  artifact.rs  bootstrap.rs  cli.rs  config.rs  devenv_import.rs  devenv_surface.rs  discover.rs  document.rs  edit.rs  exec.rs  forge.rs  hardware_inventory.rs  homebrew_bootstrap.rs  input.rs  lib.rs  machine_profile.rs  main.rs  materialization.rs  menu.rs  nixfile.rs  output.rs  pkl.rs  profile_fragment.rs  resolve.rs
src/ops/: adopt.rs  artifact.rs  build_image.rs  capabilities.rs  config.rs  dev.rs  develop.rs  devenv.rs  diff.rs  doctor.rs  forge.rs  gc.rs  hardware.rs  identity.rs  info.rs  init.rs  install.rs  list.rs  lock.rs  lock_status.rs  machine_profile.rs  migrate.rs  mod.rs  polymerize.rs  profile.rs  profile_fragment.rs  rbac.rs  relocate.rs  remove.rs  rollback.rs  search.rs  self_update.rs  switch.rs  try_pkg.rs  update.rs
tests/: e2e.rs
tests/integration/: Dockerfile  (+2 more)
(+31 files in other folders)
